Archive2/a3/d536976363fb80/output
main.cpp: In function 'int main()':
main.cpp:10:18: error: cast from 'int*' to 'int' loses precision [-fpermissive]
   *pos = (int)(&x); //*pos = f[x], f[x] = &x, also nur jede zweite stelle vom array f ändert sich zur adresse von x, die bei 2000 ist
                  ^
main.cpp:4:6: warning: unused variable 'values' [-Wunused-variable]
  int values[2] = {7,3};
      ^
